Fix top level parent/child ID matching.